
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int Huff_EmitBit (int,unsigned char*) ;
 int Huff_EmitPathToByte (void*,void**,unsigned char*) ;
 int NOT_REFERENCED ;

__attribute__((used)) static void Huff_EmitByteDynamic( void **tree, int value, unsigned char *buffer ) {
 void **subtree;
 int i;




 subtree = tree[value + 5];
 if( subtree ) {
  if( subtree[2] ) {
   Huff_EmitPathToByte( subtree[2], subtree, buffer );
  }
  return;
 }




 Huff_EmitByteDynamic( tree, NOT_REFERENCED, buffer );

 for( i=7 ; i>=0 ; i-- ) {
  Huff_EmitBit( (value >> i) & 1, buffer );
 }

}
